@@ -185,7 +185,8 @@ enum LibRaw_processing_options
   LIBRAW_PROCESSING_SRAW_NO_INTERPOLATE = 1 << 9,
   LIBRAW_PROCESSING_FORCE_FOVEON_X3F = 1 << 10,
   LIBRAW_PROCESSING_NO_ROTATE_FOR_KODAK_THUMBNAILS = 1 << 11,
-  LIBRAW_PROCESSING_USE_DNG_DEFAULT_CROP = 1 << 12
+  LIBRAW_PROCESSING_USE_DNG_DEFAULT_CROP = 1 << 12,
+  LIBRAW_PROCESSING_USE_PPM16_THUMBS = 1 << 13
 };
 
 enum LibRaw_decoder_flags
@@ -309,6 +310,7 @@ enum LibRaw_thumbnail_formats
   LIBRAW_THUMBNAIL_UNKNOWN = 0,
   LIBRAW_THUMBNAIL_JPEG = 1,
   LIBRAW_THUMBNAIL_BITMAP = 2,
+  LIBRAW_THUMBNAIL_BITMAP16 = 3,
   LIBRAW_THUMBNAIL_LAYER = 4,
   LIBRAW_THUMBNAIL_ROLLEI = 5
 };
